[gd_scene load_steps=4 format=3 uid="uid://bfj68k8sy3do7"]

[ext_resource type="Script" path="res://main.gd" id="1_pbaoh"]
[ext_resource type="PackedScene" uid="uid://t1t4a8j630s2" path="res://cannon.tscn" id="3_3a3fn"]

[sub_resource type="SystemFont" id="SystemFont_d7nky"]

[node name="Main" type="Node"]
script = ExtResource("1_pbaoh")

[node name="Message" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.195
anchor_right = 0.5
anchor_bottom = 0.195
offset_left = -195.0
offset_top = -31.6
offset_right = 212.0
offset_bottom = 26.4
theme_override_fonts/font = SubResource("SystemFont_d7nky")
theme_override_font_sizes/font_size = 42
text = "Destroy the Cannon"
horizontal_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpawnPosition" type="Marker2D" parent="."]
position = Vector2(1943, 904)

[node name="Cannon" parent="." instance=ExtResource("3_3a3fn")]
position = Vector2(-20, 437)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LevelLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 12.0
offset_right = 183.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 50
text = "Level 1
"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="destroyed" from="Cannon" to="." method="_on_cannon_destroyed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
